package ateam.techreturners.healthyfood.repository;

import ateam.techreturners.healthyfood.model.Meal;
import org.springframework.data.repository.CrudRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface MealRepository extends CrudRepository<Meal, Long> {
}
