package ateam.techreturners.healthyfood.repository;

import ateam.techreturners.healthyfood.model.User;
import org.springframework.data.repository.CrudRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface UserRepository extends CrudRepository<User, Long> {
}
